--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node": "^20.19.3"
   }
 }
